@@ -50,7 +50,7 @@ import jason.asSyntax.Trigger.TEOperator;
   @see jason.stdlib.drop_intention
   @see jason.stdlib.drop_desire
   @see jason.stdlib.succeed_goal
-  @see jason.stdlib.current_intention
+  @see jason.stdlib.intention
   @see jason.stdlib.suspend
   @see jason.stdlib.suspended
   @see jason.stdlib.resume
@@ -78,7 +78,7 @@ import jason.asSyntax.Trigger.TEOperator;
 				"jason.stdlib.drop_desire",
 				"jason.stdlib.succeed_goal",
 				"jason.stdlib.fail_goal",
-				"jason.stdlib.current_intention",
+				"jason.stdlib.intention",
 				"jason.stdlib.resume",
 				"jason.stdlib.suspend",
 				"jason.stdlib.suspended"
