@@ -5,6 +5,7 @@ ifdef::env-github[:outfilesuffix: .adoc]
 
 == version 2.6
 
+- new internal action `.intention` used to inspect the state of intentions. It also replaces `.current_intention`.
 - add option `--log-conf` to setup the logging configuration file when launching the application
 
 == version 2.5 (2020-06-25)
